--- a/dashboard/static/css/index.css
+++ b/dashboard/static/css/index.css
@@ -5,15 +5,48 @@
     --background-color: 33, 33, 33;
     --secondground-color: 50, 50, 50;
     --contrast-color: 230, 230, 230;
+    --sec-contrast-color: 255, 130, 0;
     --primary-color: 90, 90, 90;
     --second-color: 144, 144, 144;
     font-family: "Noto Sans TC", sans-serif;
     /* font-family: 'Open Sans', sans-serif; */
+    /* --background-color: 255, 255, 255;
+    --secondground-color: 230, 230, 230;
+    --contrast-color: 0, 0, 0;
+    --sec-contrast-color: 255, 130, 0;
+    --primary-color: 150, 150, 150;
+    --second-color: 60, 60, 60; */
+}
+
+* {
+    transition: background-color 0.5s, color 0.5s, border-color 0.5s;
+}
+
+html {
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 body {
     background-color: rgb(var(--background-color));
+    margin: 8px;
     margin-top: 80px;
+    height: calc(100% - 88px);
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background-color: rgb(var(--background-color));
+    border-radius: 4px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(var(--secondground-color));
 }
 
 /* .page {
