--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -6,7 +6,9 @@
         <link rel="icon" href="../static/img/favicon.ico">
         <link rel="stylesheet" href="../static/css/index.css">
         <link rel="stylesheet" href="../static/css/top-bar.css">
+        <link rel="stylesheet" href="../static/css/home.css">
         <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
         <script src="../static/js/index.js"></script>
         <title>MyselfAnimeDownloader</title>
     </head>
@@ -23,9 +25,8 @@
     <script>
         $("#top-bar").load("/include-html/top-bar.html");
         document.querySelectorAll(".page").forEach((element)=>{
-            $(element).load(`/include-html/${element.id}.html`)
+            $(element).load(`/include-html/${element.id}.html`);
         })
-        hash_change();
+        onload();
     </script>
 </html>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
