--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -10,6 +10,7 @@
         <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
         <script src="../static/js/index.js"></script>
+        <script src="../static/js/home.js"></script>
         <title>MyselfAnimeDownloader</title>
     </head>
     <body onhashchange="hash_change()">
