--- a/dashboard/templates/about.html
+++ b/dashboard/templates/about.html
@@ -1,4 +1,11 @@
 <div class="info-box">
     <div class="title">相關資訊</div>
     <hr>
+    <div class="info">
+        <p>當前版本: b0.0</p>
+    </div>
+    <div class="info">
+        <p>Github: </p>
+        <a href="https://github.com/AloneAlongLife/MyselfAnimeDownloader_WebUI" target="_blank">點擊前往</a>
+    </div>
 </div>
