--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -7,11 +7,13 @@
         <link rel="stylesheet" href="../static/css/index.css">
         <link rel="stylesheet" href="../static/css/top-bar.css">
         <link rel="stylesheet" href="../static/css/home.css">
+        <link rel="stylesheet" href="../static/css/setting.css">
         <link rel="stylesheet" href="../static/css/about.css">
         <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
         <script src="../static/js/index.js"></script>
         <script src="../static/js/home.js"></script>
+        <script src="../static/js/setting.js"></script>
         <title>MyselfAnimeDownloader</title>
     </head>
     <body onhashchange="hash_change()">
