--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -18,8 +18,8 @@
 
 </div>
 <script>
-    // setInterval(()=>{
-    //     try {$.getJSON("/api/download-queue", "", fetch_queue);}
-    //     catch {}
-    // }, 1500);
+    setInterval(()=>{
+        try {$.getJSON("/api/download-queue", "", fetch_queue);}
+        catch {}
+    }, 1500);
 </script>
