--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -7,17 +7,19 @@
         <link rel="stylesheet" href="../static/css/index.css">
         <link rel="stylesheet" href="../static/css/top-bar.css">
         <link rel="stylesheet" href="../static/css/home.css">
+        <link rel="stylesheet" href="../static/css/info.css">
         <link rel="stylesheet" href="../static/css/setting.css">
         <link rel="stylesheet" href="../static/css/about.css">
         <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
         <script src="../static/js/index.js"></script>
         <script src="../static/js/home.js"></script>
+        <script src="../static/js/info.js"></script>
         <script src="../static/js/setting.js"></script>
         <title>MyselfAnimeDownloader</title>
     </head>
-    <body onhashchange="hash_change()">
-        <div id="top-bar"></div>
+    <body onhashchange="hash_change()" class="b">
+        <div id="top-bar" class="b_2"></div>
         <div id="home" class="page"></div>
         <div id="info" class="page"></div>
         <div id="setting" class="page"></div>
