--- a/dashboard/templates/top-bar.html
+++ b/dashboard/templates/top-bar.html
@@ -29,6 +29,7 @@
     <p>About</p>
 </div>
 <div class="empty"></div>
+<div id="switch-q" class="ms" onclick="b_1();">question_mark</div>
 <div id="switch-color" class="ms" onclick="switch_color();">light_mode</div>
 <input class="search" placeholder="Search...">
 <script>
