--- a/dashboard/templates/info-results.html
+++ b/dashboard/templates/info-results.html
@@ -1,98 +1,3 @@
-<div class="result-box">
+<!-- <div class="result-box">
     <p>搖曳露營／悠閒野營 劇場版s</p>
-</div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
-<div class="result-box"></div>
+</div> -->
