--- a/dashboard/static/css/index.css
+++ b/dashboard/static/css/index.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Caveat&family=Noto+Sans+TC&family=Open+Sans&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Caveat&family=Noto+Sans+TC&family=Open+Sans&display=swap"); */
+@import url(../fonts/font.css);
 @import url("../fonts/material-symbols.css");
 
 :root {
