--- a/dashboard/templates/info.html
+++ b/dashboard/templates/info.html
@@ -1,7 +1,7 @@
 <div id="info-loading" style="display: none;"></div>
-<div id="info-results" style=""></div>
+<div id="info-results" style="display: none;"></div>
 <div id="info-anime" style="display: none;"></div>
-<div id="info-search" style="display: none;"></div>
+<div id="info-search"></div>
 <script>
     $("#info-loading").load("/include-html/info-loading.html");
     $("#info-results").load("/include-html/info-results.html");
