1. 修正Myself method中finish_list與search運行邏輯。 2. 修正M3U8.py中gen_dir_name函式變數誤植。 3. Web UI搜尋列表完成。 4. Web UI動畫資料頁完成。 5. Web UI設定頁完成。 6. Web UI搜尋功能完成。 7. Web UI下載功能完成完成。 8. Web UI貯列操作完成。 9. 將原本於Dashboard中API單獨拉出來做為一個Module，方便日後其他介面使用。

--- a/dashboard/static/css/info-anime.css
+++ b/dashboard/static/css/info-anime.css
@@ -29,6 +29,36 @@
     max-width: 80%;
 }
 
+#info-anime .info-block .back-block {
+    height: 32px;
+    display: flex;
+}
+#info-anime .info-block .back-block button {
+    background-color: transparent;
+    width: 96px;
+    height: 30px;
+    font-size: 18px;
+    line-height: 26px;
+    color: rgb(var(--secondground-color));
+    border-color: rgb(var(--secondground-color));
+    border-width: 1px;
+    border-radius: 4px;
+    border-style: solid;
+    margin: 0px;
+    transition: color 0.3s, border-color 0.3s;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#info-anime .info-block .back-block button p {
+    transition: 0s;
+}
+#info-anime .info-block .back-block button:hover {
+    color: rgb(var(--contrast-color));
+    border-color: rgb(var(--contrast-color));
+}
+
 #info-anime .info-block .anime {
     height: 420px;
     display: flex;
