--- a/dashboard/templates/info-anime.html
+++ b/dashboard/templates/info-anime.html
@@ -1,4 +1,11 @@
 <div class="info-block">
+    <div class="back-block">
+        <button onclick="show_page()">
+            <p class="ms">arrow_back</p>
+            <p>回上頁</p>
+        </button>
+    </div>
+    <hr class="hor-hr">
     <div class="anime">
         <img id="anime-img" src="">
         <hr class="vtl-hr">
