--- a/dashboard/templates/info-results.html
+++ b/dashboard/templates/info-results.html
@@ -1,3 +1,5 @@
-<!-- <div class="result-box">
-    <p>搖曳露營／悠閒野營 劇場版s</p>
-</div> -->
+<div class="results">
+    <!-- <div class="result-box">
+        <p>搖曳露營／悠閒野營 劇場版s</p>
+    </div> -->
+</div>
