--- a/dashboard/templates/top-bar.html
+++ b/dashboard/templates/top-bar.html
@@ -4,7 +4,7 @@
     <p class="ms">home</p>
     <p>Home</p>
 </div>
-<div class="tab" onclick="location.hash='info'">
+<div class="tab" onclick="location.hash='info'" ondblclick="location.hash='info';show_page(3)">
     <p class="ms">description</p>
     <p>Info</p>
 </div>
@@ -31,7 +31,7 @@
 <div class="empty"></div>
 <div id="switch-q" class="ms" onclick="b_1();">question_mark</div>
 <div id="switch-color" class="ms" onclick="switch_color();">light_mode</div>
-<input class="search" placeholder="Search..." onkeydown="if (event.keyCode==13) {search(this.value);this.value=''}">
+<input class="search" placeholder="Search..." onkeydown="if (event.keyCode==13) {search(this.value);_last_page = 3;this.value=''}">
 <script>
     if (Cookies.get("color_mode") == "1") {
         document.querySelector("#switch-color").textContent = "dark_mode";
