1. 自訂介面色彩完成。 2. 新增刷新頁面按鈕(從伺服器而非快取存取資訊)。 3. 更新dashboard.py中asyncio loop回收。 4. Web UI完結動畫列表完成。

--- a/dashboard/static/css/update-finish.css
+++ b/dashboard/static/css/update-finish.css
@@ -1,7 +1,8 @@
-#update-finish {
+#update-finish .finish-box {
     display: grid;
     grid-template-columns: repeat(7, calc(14.3% - 10px));
     gap: 12px;
+    padding-bottom: 12px;
 }
 
 #update-finish .anime-box {
@@ -29,4 +30,44 @@
 }
 #update-finish .anime-box:hover p {
     color: rgb(var(--sec-contrast-color));
+}
+
+#update-finish .loading-box {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+    position: relative;
+    height: 50vh;
+    transform: scale(0.8);
+}
+
+#update-finish .ring_text {
+    position: absolute;
+    top: calc(50% - 21px);
+    left: calc(50% - 100px);
+    width: 200px;
+    height: 42px;
+    line-height: 42px;
+    font-size: 36px;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    animation: trans 3s linear infinite;
+    font-family: "Caveat", cursive;
+}
+#update-finish .ring {
+    width: 256px;
+    height: 256px;
+    transform: rotateZ(-90deg);
+    animation: ring_ani 3s ease infinite;
+}
+#update-finish .ring circle {
+    fill: none;
+    stroke-width: 8px;
+    stroke: rgb(255, 255, 255);
+    stroke-linecap: round;
+    stroke-dasharray: 753;
+    stroke-dashoffset: 853;
+    animation: ring_c_ani 3s ease infinite;
 }
