--- a/dashboard/templates/about.html
+++ b/dashboard/templates/about.html
@@ -2,7 +2,7 @@
     <div class="title">相關資訊</div>
     <hr>
     <div class="info">
-        <p>當前版本: b0.0</p>
+        <p>當前版本: Release 1.0</p>
     </div>
     <div class="info">
         <p>Github: </p>
