--- a/dashboard/templates/update.html
+++ b/dashboard/templates/update.html
@@ -1,5 +1,5 @@
 <div class="update-switch">
-    <button onclick="show_update(2);if(new Date().getDay()!=week_update_day){get_week_anime()}">
+    <button onclick="show_update(2)">
         <p>每周列表</p>
     </button>
     <button onclick="show_update(1)">
@@ -19,7 +19,7 @@
     <div id="update-week"></div>
 </div>
 <script>
-    $("#update-finish").load("/include-html/update-finish.html");
-    $("#update-year").load("/include-html/update-year.html");
     $("#update-week").load("/include-html/update-week.html");
+    $("#update-year").load("/include-html/update-year.html");
+    $("#update-finish").load("/include-html/update-finish.html");
 </script>
