1. 將框架改為FastAPI 2. 修正快取問題。

--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -18,8 +18,5 @@
 
 </div>
 <script>
-    setInterval(()=>{
-        try {$.getJSON("/api/download-queue", "", fetch_queue);}
-        catch {}
-    }, 1500);
+    fetch_queue();
 </script>
