--- a/dashboard/static/css/top-bar.css
+++ b/dashboard/static/css/top-bar.css
@@ -10,6 +10,7 @@
     background-color: rgb(var(--secondground-color));
     box-shadow: 0px -15px 8px 16px black;
     user-select: none;
+    z-index: 2;
 }
 
 /* 開頭 */
